fixed alignments of the captable footer as well as the red button

--- a/cmn/MVP.css
+++ b/cmn/MVP.css
@@ -1446,7 +1446,7 @@ form.inputs {
     color: #FFFFFF;
 }
 
-.standard-button > button.red {
+.standard-button.red > button {
     background-color: #E74C3C;
 }
 
